--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list(map(pow, [3,5]))"
+   ]
   }
  ],
  "metadata": {
